Login & Register Screens

--- a/app.json
+++ b/app.json
@@ -1,12 +1,9 @@
 {
   "expo": {
+    "entryPoint": "./src/App.js",
     "name": "MisPacientesApp",
     "slug": "MisPacientesApp",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -18,9 +15,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
